--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,35 +1,52 @@
 [project]
 name = "graphrag"
 version = "0.1.0"
-description = "A knowledge graph system using Neo4j for indexing and querying Obsidian note collections"
+description = "Uses Neo4j's graphrag package to create a knowledge graph from an Obsidian vault."
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "neo4j>=5.0.0",
-    "click>=8.0.0",
-    "python-magic>=0.4.27",
-    "chardet>=5.0.0",
-    "pathlib2>=2.3.7",
+    "neo4j>=5.28.2",
+    "neo4j-graphrag>=1.9.1",
+    "openai>=1.0.0",
+    "python-dotenv>=1.0.0",
+    "watchdog>=3.0.0",
+    "pydantic>=2.0.0",
     "rich>=13.0.0",
-    "tqdm>=4.65.0",
-    "pyyaml>=6.0.0",
-    "markdown>=3.4.0",
-    "python-frontmatter>=1.0.0",
+    "click>=8.0.0",
 ]
 
-[project.scripts]
-graphrag = "graphrag.cli:main"
+[project.optional-dependencies]
+dev = [
+    "pytest>=7.0.0",
+    "pytest-asyncio>=0.21.0",
+    "pytest-mock>=3.10.0",
+    "black>=23.0.0",
+    "isort>=5.12.0",
+    "mypy>=1.0.0",
+]
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = ["test_*.py"]
+python_classes = ["Test*"]
+python_functions = ["test_*"]
+addopts = "-v --tb=short"
+
+[tool.black]
+line-length = 88
+target-version = ['py312']
+
+[tool.isort]
+profile = "black"
+line_length = 88
+
 [tool.uv]
 dev-dependencies = [
-    "pytest>=7.0.0",
-    "pytest-cov>=4.0.0",
-    "black>=23.0.0",
-    "isort>=5.0.0",
-    "flake8>=6.0.0",
-    "mypy>=1.0.0",
+    "pytest>=8.4.1",
+    "python-dotenv>=1.1.1",
+    "watchdog>=6.0.0",
 ]
